force-app/main/default/objects/Margem__c/Margem__c.object-meta.xml
<CustomObject>
    <description>Margem de lucro aplicada sobre um produto.</description>
    <label>Margem</label>
    <nameField>
        <displayFormat>MARGEM-{0}</displayFormat>
        <label>Nome da Margem</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Margens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>