force-app/main/default/objects/Margem__c/fields/Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Grupo de contas associado à margem (alternativo à conta).</description>
    <label>Account Group</label>
    <referenceTo>AccountGroup__c</referenceTo>
    <relationshipLabel>Margens</relationshipLabel>
    <relationshipName>Margens</relationshipName>
    <type>Lookup</type>
</CustomField>