force-app/main/default/objects/Margem__c/fields/CentroDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>CentroDistribuicao__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Centro de distribuição associado à margem.</description>
    <label>Centro de Distribuição</label>
    <referenceTo>DistributionCenter__c</referenceTo>
    <relationshipLabel>Margens</relationshipLabel>
    <relationshipName>Margens</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>