force-app/main/default/objects/Margem__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Estado da margem.</description>
    <label>Estado</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Margens</relationshipLabel>
    <relationshipName>Margens</relationshipName>
    <type>Lookup</type>
</CustomField>