force-app/main/default/objects/Margem__c/fields/HierarquiaProduto__c.field-meta.xml
<CustomField>
    <fullName>HierarquiaProduto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hierarquia sobre a qual é aplicada a margem (alternativa ao Produto)</description>
    <label>Hierarquia de Produto</label>
    <referenceTo>HierarquiaProduto__c</referenceTo>
    <relationshipLabel>Margens</relationshipLabel>
    <relationshipName>Margens</relationshipName>
    <type>Lookup</type>
</CustomField>