force-app/main/default/objects/Margem__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>País da margem.</description>
    <label>País</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Margens (País)</relationshipLabel>
    <relationshipName>Margens1</relationshipName>
    <type>Lookup</type>
</CustomField>