force-app/main/default/objects/Margem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Produto sobre o qual a margem é aplicada (alternativo à Hierarquia de Produto).</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Margens</relationshipLabel>
    <relationshipName>Margens</relationshipName>
    <type>Lookup</type>
</CustomField>