force-app/main/default/objects/Margem__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <description>Valor da margem calculado pela localidade informada e pela especificidade da conta (conta ou hierarquia).</description>
    <formula>IF(NOT(ISBLANK( Account__c )), 200, IF(NOT(ISBLANK( Account_Group__c )), 100, 0)) 
+ 
IF(NOT(ISBLANK( Cidade__c )), 30, IF(NOT(ISBLANK( Estado__c )), 10, IF(NOT(ISBLANK( Pais__c )), 10, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>