force-app/main/default/objects/Margem__c/validationRules/Account_XOR_AccountGroup.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_XOR_AccountGroup</fullName>
    <active>true</active>
    <description>Deve haver ou uma conta ou um grupo de contas selecionado</description>
    <errorConditionFormula>NOT( 
  OR( 
    AND( 
      ISBLANK( Account__c ) , 
      NOT( ISBLANK( Account_Group__c ) ) 
    ) ,
    AND( 
      ISBLANK( Account_Group__c ) , 
      NOT( ISBLANK( Account__c ) ) 
    )   
  ) 
)</errorConditionFormula>
    <errorMessage>Deve-se selecionar uma Conta ou um Grupo de Contas, e apenas um dos dois.</errorMessage>
</ValidationRule>