force-app/main/default/objects/Margem__c/validationRules/Produto_XOR_Hierarquia.validationRule-meta.xml
<ValidationRule>
    <fullName>Produto_XOR_Hierarquia</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( 
  OR( 
    AND( 
      ISBLANK( HierarquiaProduto__c ) , 
      NOT( ISBLANK( Product__c ) ) 
    ) ,
    AND( 
      ISBLANK( Product__c ) , 
      NOT( ISBLANK( HierarquiaProduto__c ) ) 
    )   
  ) 
)</errorConditionFormula>
    <errorMessage>Deve-se selecionar um Produto ou uma Hierarquia, e apenas um dos dois.</errorMessage>
</ValidationRule>