force-app/main/default/objects/Margem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AccountGroup__c</columns>
    <columns>Product__c</columns>
    <columns>HierarquiaProduto__c</columns>
    <columns>CentroDistribuicao__c</columns>
    <columns>Cidade__c</columns>
    <columns>Estado__c</columns>
    <columns>Pais__c</columns>
    <columns>Status__c</columns>
    <columns>Valor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>